<resources>
    <string name="app_name">Yum Yum Tree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="splash_rest_name">YumYumTree</string>
    <string name="splash_slogan">Where taste meets the myth</string>

    <string name="login_welcome">Hello there, Welcome Back!</string>
    <string name="login_signin">Sign In to continue</string>
    <string name="fotget_button_text">FORGET PASSWORD?</string>
    <string name="login_button_text">LOGIN</string>
    <string name="logout_button_text">LOGOUT</string>
    <string name="register_button_text">NEW USER? SIGN UP</string>
    <string name="upluad_button">Upload</string>

    <string name="register_welcome">Welcome!</string>
    <string name="register_slogan">SignUp to start a new Journey</string>
    <string name="register_text">Register</string>
    <string name="backToLogin_text">Already have an account? Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="change_password">Change Password</string>

<!--    MESSAGES-->
    <string name="alert_message">Enter a new password!</string>
    <string name="positive_alert_button">Ok</string>
    <string name="negative_alert_button">Cancel</string>

    <string name="alert_message_home">Are you sure you want to exit?</string>
    <string name="positive_alert_button_home">Exit</string>
    <string name="negative_alert_button_home">Cancel</string>
    <string name="imageUrlFromFirebase">imageUrl</string>
    <string name="users">users</string>


</resources>