<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment"
    android:id="@+id/loginfragment"
    android:background="#227db5">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/medium_size"
        android:layout_height="@dimen/medium_size"
        android:src="@drawable/food"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/logoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_welcome"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintTop_toBottomOf="@id/logoImage" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signin"
        android:textSize="@dimen/extra_small_text_size"
        android:fontFamily="serif-monospace"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/logoName"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toBottomOf="@id/sign_in"
        android:id="@+id/fullname"
        android:hint="Full Name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:text="Sipos"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_small"
        app:layout_constraintTop_toBottomOf="@id/fullname"
        android:id="@+id/password"
        android:hint="Password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:text="sipi2000#"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forget_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/fotget_button_text"
        android:textAlignment="viewEnd"
        android:gravity="end"
        android:background="#0000"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/login_button_text"
        android:textAlignment="center"
        android:gravity="center"
        android:background="#000000"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/forget_button" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:text="@string/register_button_text"
        android:textAlignment="center"
        android:gravity="center"
        android:background="#0000"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>